--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,17 @@
-
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.card-body {
+    padding-bottom: 60px; 
+  }
+  
+  .list-group {
+    max-height: 400px; 
+    overflow-y: auto; 
+  }
+  
+  body {
+    background-color: #f8f9fa;
+  }
+  
+  .container {
+    margin-top: 50px;
+  }
+ 
